error.log cleanup + some random loc

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -9,8 +9,11 @@
  daimin_monarchy_reform_desc:0 "Damin monarchy integrates element of the Haanping philosophy by abstaining from any conflict."
  mechanic_dip_inf_cou_give_accept_vassalization_reason_yes:0 "Completing Diplomatic, Influence or Court ideas will grant us additional §G10§! Vassalization Acceptance each."
  cou_vassal_acceptance_10:0 "Daimin Monarchy"
+ desc_cou_vassal_acceptance_10:0 "Daimin Monarchy"
  dip_vassal_acceptance_10:0 "Daimin Monarchy"
+ desc_dip_vassal_acceptance_10:0 "Daimin Monarchy"
  inf_vassal_acceptance_10:0 "Daimin Monarchy"
+ desc_inf_vassal_acceptance_10:0 "Daimin Monarchy"
  meritocratic_monarchy_reform:0 "Meritocratic Monarchy"
  meritocratic_monarchy_reform_desc:0 "This form of monarchy integrates elements of the Huljiming philosophy to achieve the most skilled court possible."
  huangche_regime_reform:0 "Huangche Regime"
