--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -23,7 +23,7 @@
  acerb.3.a:0 "Great, let's set it up!"
  acerb.3.b:0 "It is not worth the hassle."
  acerb_new_vineyards:0 "New Vineyards"
- acerb_new_vineyards:0 "New Vineyards have been established in this province due to new owners and high demand."
+ desc_acerb_new_vineyards:0 "New Vineyards have been established in this province due to new owners and high demand."
 
  group_march_ideas:0 "Marcan Ideas"
  group_march_ideas_start:0 "Marcan Traditions"
