--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -114,17 +114,21 @@
  Demand_Levy:0 "Demand Levy"
  TD_Imperial_Decree1_tooltip:0 "Demand Additional Levy from our subjects"
  emperor_recently_demanded_levy:0 "Abused feudal contract"
+ desc_emperor_recently_demanded_levy:0 "The emperor used their god-given right to illegaly conscript our men."
  Found_Towns:0 "Found Towns"
  TD_Imperial_Decree2_tooltip:0 "Found new towns across the Empire"
  random_dev_point_tooltip:0 "Gain §G1§! Random development point in §Y[This.GetName]§!."
  emperor_new_towns:0 "New Town Founded"
+ desc_emperor_new_towns:0 "Many new settlements were founded here thanks to the Emperor."
  Restrict_Synods:0 "Restrict Synods"
  TD_Imperial_Decree3_tooltip:0 "Restrit organising synods in the Empire"
  emperor_synods_banned:0 "Synods Restricted"
+ desc_emperor_synods_banned:0 "The Emperor sanctioned most of the Synods happening around these parts."
  emperor_synods_banned_opinion:0 "Synods Banned"
  Bless_Wars:0 "Bless Wars"
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
  emperor_blessed_war:0 "Blessed Wars"
+ desc_emperor_blessed_war:0 "The Emperor gave us a free hand in waging war between ourselves."
 
 
  
