--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -1,11 +1,12 @@
 ﻿l_english:
  COLONIAL_REGION_New_Root_GetName:0 "New [Root.GetName]"
+ COLONIAL_REGION_New_Root_GetName_ADJ:0 "New [Root.GetAdjective]"
 
  colonial_tonatiqan:0 "Colonial Tonatiqan"
  COLONIAL_camanej:0 "Camanej"
  COLONIAL_camanej_ADJ:0 "Camaneji"
  COLONIAL_Kamanechland:0 "Kamanechland"
- COLONIAL_Kamanechland:0 "Kamanechlander"
+ COLONIAL_Kamanechland_ADJ:0 "Kamanechlander"
  COLONIAL_new_dorchia:0 "New Dorchia"
  COLONIAL_new_dorchia_ADJ:0 "New Dorchean"
  COLONIAL_wetterland:0 "Wetterland"
