--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -397,6 +397,7 @@
  gajifeng_group:0 "Gajifeng"
  lansenli:0 "Lansenli"
  tsakung:0 "Tsakung"
+ bujiun:0 "Bujiun"
 
  east_hengtuan_group:0 "Tsinhoi"
  beidao:0 "Beidao"
