--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -8,7 +8,7 @@
  peasants_loyalty_modifier:0 "[Country.GetPeasantryName] Loyalty Equilibrium"
  peasants_influence_modifier:0 "[Country.GetPeasantryName] Influence"
  peasants_privilege_slots:0 "[Country.GetPeasantryName] Max Privileges"
- estate_nobles_ownership:0 "[Country.GetPeasantryName] Land Ownership"
+ estate_peasants_ownership:0 "[Country.GetPeasantryName] Land Ownership"
 
 
  estate_peasants_develop_x:0 "Increase Development in [agenda_province.GetName]"
