--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -6,7 +6,7 @@
  PIR:0 "Pirates"
  PIR_ADJ:0 "Piratic"
  SYN:0 "Combine"
- SYN:0 "Combine"
+ SYN_ADJ:0 "Combine"
  REB:0 "Rebels"
  REB_ADJ:0 "Rebel Alliance"
 
@@ -887,7 +887,7 @@
  PES:0 "Pesakh"
  PES_ADJ:0 "Pesakhi"
  MAI:0 "Maisha"
- MAJ_ADJ:0 "Maishan"
+ MAI_ADJ:0 "Maishan"
 
  KKA:0 "Kakatachia"
  KKA_ADJ:0 "Kakatachian"
