--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -4108,7 +4108,7 @@
  PROV4107:0 "4107"
  PROV4108:0 "4108"
  PROV4109:0 "4109"
- PROV4110:0 "4110"
+ PROV4110:0 "Gapratikh"
  PROV4111:0 "4111"
  PROV4112:0 "4112"
  PROV4113:0 "4113"
