fixes + eneratian ideas

--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -389,10 +389,10 @@
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "Call Ecumenical Council"
  CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "Do you want to spend $COST|Y$¤ to call the Ecumenical Council? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain §Y$INFLUENCE$§W Invested influence towards becoming the next Episcopal Controller."
  # Buy Indulgence
- CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly PaEpiscopal Influenceor $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Episcopal Influence $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
  CURIA_BUY_INDULGENCE_EXCOMMUNICATED:0 "You are Excommunicated, so the price for your Indulgence is $MULTIPLIER|Y$ times bigger. The Pope, on the other hand, will reward your proof of faith by lifting it and will not try Excommunicate you again for $YEARS|Y$ years."
  CURIA_BUY_INDULGENCE_TITLE:0 "Buy Indulgence"
- CURIA_BUY_INDULGENCE_DESC:0 "Do you want to spend $COST|Y$¤ to buy Indulgence for your sins? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly PaEpiscopal Influenceor $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE_DESC:0 "Do you want to spend $COST|Y$¤ to buy Indulgence for your sins? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Episcopal Influence $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
  CURIA_BUY_INDULGENCE_ALREADY_BOUGHT:0 "§RYou have already bought Indulgence for your sins, no amount of money can change the Pope's mind at the moment.§!"
  CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§RYou need $COST|Y$¤ to buy Indulgence, but you only have $AVAILABLE|Y$¤§!"
  EXCOM_TARGET_BOUGHT_INDULGENCE:0 "§RThe target bought Indulgence for his sins, you cannot Excommunicate him now.§!"
