--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -46,8 +46,8 @@
  qarasam_tradenode:0 "Qarasam"
  frasatah_tradenode:0 "Anjafrah"
  qubrayia_tradenode:0 "Qubrayia"
- ehwitraw_tradenode:0 "Ehwitraw"
- mewitasr_tradenode:0 "Mewitasr"
+ ehwitraw_tradenode:0 "Fadi"
+ mewitasr_tradenode:0 "Rasus"
  east_kakigia_tradenode:0 "Bolporpost"
  paqivaz_tradenode:0 "Zuwaran"
  watlistan_tradenode:0 "Arkhaz"
@@ -67,8 +67,8 @@
  blawenn_tradenode:0 "Blawenn"
  sipiwimekya_valley_tradenode:0 "Sipiwimekya Valley"
  ashmorland_tradenode:0 "Ashmorland"
- khantadun_tradenode:0 "Khantadun"
- paredesh_tradenode:0 "Paredesh"
+ khantadun_tradenode:0 "Khanta"
+ paredesh_tradenode:0 "Sursurthan"
  bugtang_tradenode:0 "Bugtang"
  weixiao_tradenode:0 "Tövdov"
  henling_coast_tradenode:0 "Henling Coast"
