--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- eneratian_emperor_tooltip:0 "Emperor §Y[eneratian_emperor_target.Monarch.GetName] [eneratian_emperor_target.Monarch.Dynasty.GetName]§!\n---\nThis nation is considered to be the De Jure Emperor of the Eneratian Empire. While granting no real power over fellow eneratian countries, this brings a great deal of prestige and recognition.\nBeing the §YEneratian Emperor§! grants:\n Diplomats:§G +1§!\n Yearly Prestige:§G +1.00§!\n Tolerance of the True Faith:§G +1.00§!\n Monthly Fervor:§G +1.00§!"
+ eneratian_emperor_tooltip:0 "Emperor §Y[eneratian_emperor_target.Monarch.GetName] [eneratian_emperor_target.Monarch.Dynasty.GetName]§!\n---\nThis nation is considered to be the De Jure Emperor of the Eneratian Empire. While granting no real power over fellow eneratian countries, this brings a great deal of prestige and recognition.\nBeing the §YEneratian Emperor§! grants:\n Diplomats:§G +1§!\n Yearly Prestige:§G +1.00§!\n Monthly Fervor:§G +1.00§!"
 
  fervor_community_short:0 "Community"
  fervor_holy_war_short:0 "Holy War"
