--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1797,7 +1797,7 @@
  PROV1796:0 "1796"
  PROV1797:0 "1797"
  PROV1798:0 "Valvu Estuary"
- PROV1799:0 "1799"
+ PROV1799:0 "Biyaharan Coast"
  PROV1800:0 "Saryanan Bay"
  PROV1801:0 "Malailumi Coast"
  PROV1802:0 "1802"
