--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1773,7 +1773,7 @@
  PROV1772:0 "Hirahirawa"
  PROV1773:0 "Sutrani Bay"
  PROV1774:0 "1774"
- PROV1775:0 "1775"
+ PROV1775:0 "Svatini Coast"
  PROV1776:0 "1776"
  PROV1777:0 "1777"
  PROV1778:0 "1778"
