nations + cultures + government + need to fix slaves + probably need to fix some reforms

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -471,3 +471,7 @@
  dinehan:0 "Dinehan"
  kaliynao:0 "Kaliynao"
  koinama:0 "Koinama"
+
+ pantaki_group:0 "Pantaki"
+ rambutako:0 "Rambutako"
+ likuruma:0 "Likuruma"
