--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1229,3 +1229,13 @@
  MLS_ADJ:0 "Melesian"
  KED:0 "Kedipol"
  KED_ADJ:0 "Kedipol"
+ ALL:0 "Allaura"
+ ALL_ADJ:0 "Allauran"
+ BND:0 "Bunada"
+ BND_ADJ:0 "Bunadian"
+ DAP:0 "Dapai"
+ DAP_ADJ:0 "Dapain"
+ MIU:0 "Mailaun"
+ MIU_ADJ:0 "Mailaunese"
+ ULA:0 "Ulanusu"
+ ULA_ADJ:0 "Ulanusan"
