--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -130,3 +130,5 @@
  embedded_sointuva_government_reform_desc:0 "The religion of our ancestors is the driving force of our state's actions."
  state_and_shrines_intertwined_taedium_reform:0 "State-controlled Shrines"
  state_and_shrines_intertwined_taedium_reform_desc:0 "The shrines will be now directly under the control of the state. While we keep a distinct border beetwen the Clergy and the affairs of the state, it is apparent that our ruling government acts in the interests and virtues of Shintoism."
+
+ mechanic_extra_trade_goods_from_slaves_yes:0 "Every owned §YSlaves§! producing province gets the following bonus:\nLocal Production Efficiency: §G+25%§!"
