--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -39,3 +39,4 @@
  WGH_quarters:0 "WGH Quarters"
  desc_WGH_quarters:0 "Wedlanska Gildija Handlowa owns many quarters in this province."
  WGH_trade_power:0 "WGH Quarters"
+ slave_bonus_prod:0 "Slaves Production Bonus"
