--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -14,7 +14,6 @@
  usra_reform_desc:0 "Usra DESC"
  USRA:0 "Usra"
  GRAND_USRA:0 "Grand Usra"
- #Why is it localised twice? - Kazuma
  ABUSRA:0 "Abusra"
  GRAND_ABUSRA:0 "Grand Abusra"
  AMUSRA:0 "Grand Amusra"
@@ -132,3 +131,12 @@
  state_and_shrines_intertwined_taedium_reform_desc:0 "The shrines will be now directly under the control of the state. While we keep a distinct border beetwen the Clergy and the affairs of the state, it is apparent that our ruling government acts in the interests and virtues of Shintoism."
 
  mechanic_extra_trade_goods_from_slaves_yes:0 "Every owned §YSlaves§! producing province gets the following bonus:\nLocal Production Efficiency: §G+25%§!"
+
+ kawin_benat_reform:0 "Kawin Benat"
+ kawin_benat_reform_desc:0 "Slavery is how our state can maintain its living standards, because of that our nation is focused on optimal usage of their work and ease of their transport to our most industrious areas."
+ 
+ free_republic_reform:0 "Free Republic"
+ free_republic_reform_desc:0 "Our state was created during slave revolt that gained us independence from the local slavers. Republic first formed in the fires of the revolution wasn't later reformed so it can't maintain control over large swaths of land. But people here are still eager to fight for freedom of others."
+
+ tikset_monarchy_reform:0 "Tikset Monarchy"
+ tikset_monarchy_reform_desc:0 "Need for safe communication in Lunpilat Empire forced a lot of people to join our navy. Later a mandatory service on our ships was introduced, after the empire this law still remained in place. But now instead of recruiting everyone we weed out the mediocre candidates with the best of best being send to serve on our galleys"
