--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1241,3 +1241,9 @@
  ULA_ADJ:0 "Ulanusan"
  PNE:0 "Puntien"
  PNE_ADJ:0 "Puntienese"
+ NUA:0 "Nuanatas"
+ NUA_ADJ:0 "Nuantase"
+ AWA:0 "Awabiasa"
+ AWA_ADJ:0 "Awabiasan"
+ BTR:0 "Biloturu"
+ BTR_ADJ:0 "Biloturan"
