--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1247,3 +1247,7 @@
  AWA_ADJ:0 "Awabiasan"
  BTR:0 "Biloturu"
  BTR_ADJ:0 "Biloturan"
+ ABA:0 "Abalok"
+ ABA_ADJ:0 "Abalokian"
+ HNP:0 "Hanpyan"
+ HNP_ADJ:0 "Hanpyanese"
