--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -471,7 +471,9 @@
  dinehan:0 "Dinehan"
  kaliynao:0 "Kaliynao"
  koinama:0 "Koinama"
+ nilutapa:0 "Nilutapa"
 
  pantaki_group:0 "Pantaki"
  rambutako:0 "Rambutako"
  likuruma:0 "Likuruma"
+ burikat:0 "Burikat"
