--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -437,6 +437,8 @@
 
  aminian_group:0 "Aminian"
  yabuha:0 "Yabuha"
+ kindula:0 "Kindula"
+ aslikana:0 "Aslikana"
 
  prakaani_group:0 "Prakaani"
  wongkaan:0 "Wongkaan"
