--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -218,12 +218,13 @@
  uttarian_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  kausali:0 "Kausali"
+ kausali_religion_desc:0 ""
  kausali_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  kausali_rebels_title:0 "Religious"
  kausali_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  kausali_rebels_army:0 "$RELIGION$ Army"
  kausali_rebels_demand:0 "Convert $COUNTRYNAME$"
-
+ anektasian:0 "Anektasians"
 
 
 
@@ -429,3 +430,13 @@
  pitriy_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  pitriy_rebels_army:0 "$RELIGION$ Army"
  pitriy_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+
+ aminian_pantheon:0 "Aminian Pantheon"
+ aminian_pantheon_religion_desc:0 ""
+ henchu:0 "Henchu"
+ aminian_pantheon_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ aminian_pantheon_rebels_title:0 "Religious"
+ aminian_pantheon_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ aminian_pantheon_rebels_army:0 "$RELIGION$ Army"
+ aminian_pantheon_rebels_demand:0 "Convert $COUNTRYNAME$"
