--- a/localisation/TD_01_flavour_gyrdia_l_english.yml
+++ b/localisation/TD_01_flavour_gyrdia_l_english.yml
@@ -20,3 +20,22 @@
  gyrdia_new_world_opportunity_desc:0 "Decreasing standard of living in the mainland has caused many gyrdians to seek new life abroad - not only in civilized lands, but also in the new world, full of mystery yet familiar feeling of home."
  gyrdia_sailor_songs:0 "Sailor Songs"
  gyrdia_sailor_songs_desc:0 "To maintain better tempo when coordinating many sailors during sea voyages, sea songs quickly develop. Catchy and rhytmical, they ofter describe the way of life on the seas and are ofter humorical in nature."
+
+
+ gyrdian_ideas:0 "Gyrdian Ideas"
+ gyrdian_ideas_bonus:0 "Gyrdian Ambition"
+ gyrdian_ideas_start:0 "Gyrdian Traditions"
+ gyrdia_shipbuilding:0 "Gyrdian Shipbuilding"
+ gyrdia_shipbuilding_desc:0 "The abundance of high quality limber and large mercantile potential in the region both were the factors of our people's skill in shipmaking. Our ships are mostly adapted to be used in the deep waters and for long voyages to Nifthem, Ehrenia and Dorchean Isles."
+ gyrdia_on_our_own:0 "On Our Own"
+ gyrdia_on_our_own_desc:0 "For a large part of our long history we have been under the influence of a foreign power. Silvestrian tribes often vassalized our ancestors, Nifthemians were slowly pushing us west and we heavily embraced the imperial customs and religions. Despite all of this, we still maintain a strong sense of identity which will guide our nation forward."
+ gyrdia_codex_maiorum:0 "Codex Maiorum"
+ gyrdia_codex_maiorum_desc:0 "Most common laws in our nation, often known collectively as 'Codex Maiorum', was preserved from the ancient times thanks to the effort of court judges. They often were one of the more prestigious positions in the nation and were often rightfully seen as preservers of our ancestral tradition."
+ gyrdia_grand_fisheries:0 "Grand Fisheries"
+ gyrdia_grand_fisheries_desc:0 "The Dorchean Archipelago and seas surrounding it are widely known for their variety of fishes, but many of those species also inhabit our coasts. Our fishermen greatly benefit from this and can often sell their stock with a larger margin of profit thanks to the neighboring continental markets."
+ gyrdia_border_defense:0 "Border Defense"
+ gyrdia_border_defense_desc:0 "Our land lies on many sandy hills and lakes which allow us to build fortifications effectively and with minimal effort in most places. This proved to be useful during many wars and raids in these lands, when many invaders were stopped at those impenetrable forts."
+ gyrdia_new_industries:0 "New Industries"
+ gyrdia_new_industries_desc:0 "In order to maintain an economic stability and growth, we have to diversify the production in our nation. In the XVI and XVII centuries our rulers invested into urban spaces to increase the production of jewelry, glass, paper, clothes and processing of metals. This also led to us gaining a place on the world stage, bestowing us great prestige."
+ gyrdia_oversea_empire:0 "Oversea Empire"
+ gyrdia_oversea_empire_desc:0 "Our ventures into Chantlia were started by our ambitious noblemen, who wanted to establish colonies following the success of other great powers in the new world. We not only wanted to spread our influence in these lands, but also maintain a stable trade relations with local nations and other colonizers, often serving as the middlemen."
