idea loc + fixes

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -39,8 +39,8 @@ chilverchian_knighthood_knightly_fervor_desc:0 "Shows how eager our nation is to
 
 chilverchian_knighthood_knightly_fervor_gain_modifier:0 "Knightly Fervor"
 monthly_chilverchian_knighthood_knightly_fervor:0 "Monthly Knightly Fervor"
-chilverchian_knighthood_mobilisation:0 "Mobilisation"
-chilverchian_knighthood_mobilisation_desc:0 "We will use our authority to increase national fervor"
+chilverchian_knighthood_mobilisation:0 "National Mobilization"
+chilverchian_knighthood_mobilisation_desc:0 "We will use our authority to increase the national fervor."
 
 ## Modifiers
 chilverchian_march_peasant_rebellion:0 "Local Peasant Rebellion"
