--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -4,3 +4,39 @@
  WAPETYAH:0 "Wapetyah"
  wapetya_sapsy_reform:0 "Wapetya Sapsy"
  wapetya_sapsy_reform_desc:0 "Hestani rulers are seen as messengers of Gods who rule these lands in their name, later to ascend to godhood themselves."
+
+ ehwitrawi_ideas:0 "Ehwitrawi Ideas"
+ ehwitrawi_ideas_bonus:0 "Ehwitrawi Ambition"
+ ehwitrawi_ideas_start:0 "Ehwitrawi Traditions"
+ ehwitraw_land_of_the_older_brother:0 "Land of the Older Brother"
+ ehwitraw_land_of_the_older_brother_desc:0 "According to the most ancient legend of our nation, all hestani people descend from one of the two brothers who were birthed by the mountain goddess of Nirqad. The brothers fought between themselves which one should rule over the world. After decades of fighting, the older brother, Qanat, settled near the Fadi, while the younger brother was forced into exile to the river Rasus."
+ ehwitraw_prosperity_of_fadi:0 "prosperity of the Fadi"
+ ehwitraw_prosperity_of_fadi_desc:0 "The long and wide river of Fadi is and always was the backbone of our civilization. Thanks to the early adoption of advanced irrigation we managed to increase the much required food production even more, concentrating the vast majority of our population along this great river."
+ ehwitraw_western_trade:0 "Western Trade"
+ ehwitraw_western_trade_desc:0 "Thanks to the abundance of grain, our merchants often sell it to distant lands in order to exchange it for variety of exotic goods. Recently, the rising prices of grain in the west led to our merchants being much more eager to interact with Kakigians and Taedians, who are now much more desperate for our high quality wheat."
+ ehwitraw_desert_raiders:0 "Desert Raiders"
+ ehwitraw_desert_raiders_desc:0 "The Magraag desert is mostly populated by disorganized nomads who roam the desert thanks to their well trained camels. Despite their disconnection from the outside world majority of the time, in times of war of conflict they serve our ruler and our gods in order to protect their land."
+ ehwitraw_naval_domination:0 "Naval Domination"
+ ehwitraw_naval_domination_desc:0 "The key to controlling the Hestani sea is to effectively move goods and men around it. While many countries rely on foreign services and merchants, it is indisputable that any nation wishing to dominate the sea needs to establish a strong and unstoppable fleet."
+ ehwitraw_art_of_revenge:0 "Art of Revenge"
+ ehwitraw_art_of_revenge_desc:0 "The fights and wars between Ehwitraw and Mewitasr are so ancient that even the oldest folk tales focus on the conflict between the founders of both of our nations. Conflicted merchants, land disputes and even rumors and insults - rulers used anything to justify their hatred towards the other nation, but often only ending in a minor skirmish near the border."
+ ehwitraw_nahitar_bastion:0 "Nahitar Bastion"
+ ehwitraw_nahitar_bastion_desc:0 "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Rah Jadid. Our country is one of the few that still practices this true faith which helped us build our national identity."
+
+ mewitasri_ideas:0 "Mewitasri Ideas"
+ mewitasri_ideas_bonus:0 "Mewitasri Ambition"
+ mewitasri_ideas_start:0 "Mewitasri Traditions"
+ mewitasr_land_of_the_younger_brother:0 "Land of the Younger Brother"
+ mewitasr_land_of_the_younger_brother_desc:0 "According to the most ancient legend of our nation, all hestani people descend from one of the two brothers who were birthed by the mountain goddess of Nirqad. The brothers fought between themselves which one should rule over the world. After decades of fighting, the older brother, Qanat, settled near the Fadi, while the younger brother was forced into exile to the river Rasus."
+ mewitasr_prosperity_of_rasus:0 "Prosperity of Rasus"
+ mewitasr_prosperity_of_rasus_desc:0 "The long and wide river of Rasus is and always was the backbone of our civilization. Thanks to the early adoption of advanced irrigation we managed to increase the much required food production even more, concentrating the vast majority of our population along this great river."
+ mewitasr_nomadic_frontier:0 "Nomadic Frontier"
+ mewitasr_nomadic_frontier_desc:0 "Our northern border is often seen as the end of the civilization. What lies beyond are lands filled with wild and nomadic people of the steppe who only wait for a chance to strike and ravage our lands. Thankfully through the ages we learned how to fight them effectively and with minimal loses."
+ mewitasr_wamt_mining:0 "Wamt Mining"
+ mewitasr_wamt_mining_desc:0 "The region near the Nirqad and Dusrat mountains is often referred to as Wamt, thanks to the large amount of metalic and mineral resources stored in those mountains. The steel and gems coming from those mines are used in our weapons and in our jewelry."
+ mewitasr_control_the_trade:0 "Control the Trade"
+ mewitasr_control_the_trade_desc:0 "Despite the wild nature of the northern steppe, it is a naturally great route for goods to quickly travel from one place to another. The settlement of Gmitar historically was the most important gateway to that world beyond the Hestan, but after it fell this title was taken by the neighboring city of Mafid. Thankfully our merchants do what they can to limit the power of that city-state and bring back our domination."
+ mewitasr_art_of_revenge:0 "Art of Revenge"
+ mewitasr_art_of_revenge_desc:0 "The fights and wars between Ehwitraw and Mewitasr are so ancient that even the oldest folk tales focus on the conflict between the founders of both of our nations. Conflicted merchants, land disputes and even rumors and insults - rulers used anything to justify their hatred towards the other nation, but often only ending in a minor skirmish near the border."
+ mewitasr_nahitar_bastion:0 "Nahitar Bastion"
+ mewitasr_nahitar_bastion_desc:0 "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Rah Jadid. Our country is one of the few that still practices this true faith which helped us build our national identity."
