--- a/localisation/TD_01_flavour_kausali_l_english.yml
+++ b/localisation/TD_01_flavour_kausali_l_english.yml
@@ -13,3 +13,4 @@
  desc_TD_glorification_of_conquest:0 "Wars to protect our bretherens will always be justified."
  KAUSALI_DOCTRINES_LONG:0 "The Doctrine of Faith"
  KAUSALI_DOCTRINES_SHORT:0 "Doctrine"
+ KAUSALI_DOCTRINES_POWER_NAME:0 "Church Power"
