National Ideas Localisation

--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -88,3 +88,21 @@
  pamkusean_eternal_march_desc:0 "We were recruited to fight in far lands of Zakarturi Empire and Eneratian Empire. When these empires collapsed many people had hopes that we will be able to enjoy our lives in peace, but after Visparayan invasion we are still far from our homelands, forced to march until we do our duty."
  pamkusean_national_liberation:0 "National Liberation"
  pamkusean_national_liberation_desc:0 "The time is now. We can't eternally lament our history, the fate demands us to finally decide what we should do. But until it doesn't happen, we will be ready."
+ 
+ achnith_ideas:0 "Achinthian Ideas"
+ achnith_ideas_start:0 "Achinthian Traditions"
+ achnith_ideas_bonus:0 "Achinthian Ambition"
+ achnith_sea_fire:0 "Sea Fire"
+ achnith_sea_fire_desc:0 "Achnithian invetion of Sea Fire, a sticky substance that is easly flamable, and decision to use it on our galleys, our naval combat prowess has dramatically increased."
+ achnith_visparayan_fascination:0 "Visparayan Fascination"
+ achnith_visparayan_fascination_desc:0 "Our country remains on the frontier of Visparayan invasion into Pamkusea, and is the only one that survived said invasion. But instead of hatred towards the Visparayans, we are fascinated by them, and want to learn more about different religious societies."
+ achnith_our_sea:0 "Our Sea"
+ achnith_our_sea_desc:0 "Panourgian Sea was always dominated by our ships, both merchant and navy ones. It's time we utilize our ships to protect our trade interests on said sea."
+ achnith_cultural_acceptance:0 "Cultural Acceptance"
+ achnith_cultural_acceptance_desc:0 "With survivng so long, we have learned that peaceful cooperation brings more money than war, so we learned with time to accept different cultures in our society, as it brings profit for both us and them."
+ achnith_rapid_deployment:0 "Rapid Deployment"
+ achnith_rapid_deployment_desc:0 "With having so many isles to keep an eye on, landing embarked troops taking too long have become one of the problems for our army. To circumvent it, we have formed the army Marines, to allow quick landings when needed."
+ achnith_sea_forts:0 "Sea Forts"
+ achnith_sea_forts_desc:0 "With so long coasts as ours, defending it with only navy is practically impossible. To protect our lands and isles from naval invasion, we have invented a system of sea forts along the coasts, to make naval invasion of our homeland a hard endeavour."
+ achnith_sailor_spirit:0 "Sailor Spirit"
+ achnith_sailor_spirit_desc:0 "Our country is one dependent on sea, and some of our citizens spend more time on water than on land. With long naval tradition and heritage, our sailors are embodiment of the sailor spirit, and are ready to go down with the ship and it's captain."
