--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -10,7 +10,7 @@
  ehwitrawi_ideas_start:0 "Ehwitrawi Traditions"
  ehwitraw_land_of_the_older_brother:0 "Land of the Older Brother"
  ehwitraw_land_of_the_older_brother_desc:0 "According to the most ancient legend of our nation, all hestani people descend from one of the two brothers who were birthed by the mountain goddess of Nirqad. The brothers fought between themselves which one should rule over the world. After decades of fighting, the older brother, Qanat, settled near the Fadi, while the younger brother was forced into exile to the river Rasus."
- ehwitraw_prosperity_of_fadi:0 "prosperity of the Fadi"
+ ehwitraw_prosperity_of_fadi:0 "Prosperity of the Fadi"
  ehwitraw_prosperity_of_fadi_desc:0 "The long and wide river of Fadi is and always was the backbone of our civilization. Thanks to the early adoption of advanced irrigation we managed to increase the much required food production even more, concentrating the vast majority of our population along this great river."
  ehwitraw_western_trade:0 "Western Trade"
  ehwitraw_western_trade_desc:0 "Thanks to the abundance of grain, our merchants often sell it to distant lands in order to exchange it for variety of exotic goods. Recently, the rising prices of grain in the west led to our merchants being much more eager to interact with Kakigians and Taedians, who are now much more desperate for our high quality wheat."
@@ -40,3 +40,21 @@
  mewitasr_art_of_revenge_desc:0 "The fights and wars between Ehwitraw and Mewitasr are so ancient that even the oldest folk tales focus on the conflict between the founders of both of our nations. Conflicted merchants, land disputes and even rumors and insults - rulers used anything to justify their hatred towards the other nation, but often only ending in a minor skirmish near the border."
  mewitasr_nahitar_bastion:0 "Nahitar Bastion"
  mewitasr_nahitar_bastion_desc:0 "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Rah Jadid. Our country is one of the few that still practices this true faith which helped us build our national identity."
+ 
+ ehtywiran_ideas:0 "Ehtywiran Ideas"
+ ehtywiran_ideas_start:0 "Ehtywiran Traditions"
+ ehtywiran_ideas_bonus:0 "Ehtywiran Ambition"
+ ehtywira_new_ways:0 "New Ways"
+ ehtywira_new_ways_desc:0 "With our embracement of new faith that is Rah Jadid, we must do everything to make sure it is here to stay, and that it will encompass all of Hestan!"
+ ehtywira_highland_folk:0 "Highland Folk"
+ ehtywira_highland_folk_desc:0 "Ehtywira is a mountainous area, which favors the defense of said area. The vast mountain ranges helps save a bit of money with maintaining fortifications."
+ ehtywiran_sarzum_passage:0 "Sarzum Passage"
+ ehtywiran_sarzum_passage_desc:0 "Sarzum Passage is the only land route in the area that leads through the mountains, and we can profit from it if we use it properly."
+ ehtywira_steppe_tamers:0 "Steppe Tamers"
+ ehtywira_steppe_tamers_desc:0 "With constant fights with the steppe hordes north of Sarzum Passage, we have adapted our fighting methods accordingly to circumvent the cavalry shock tactics."
+ ehtywira_tribal_diplomacy:0 "Tribal Diplomacy"
+ ehtywira_tribal_diplomacy_desc:0 "We can fight with the hordes if we must, but if we ever want to secure peace and prosperity in the north, we must also try to speak with them."
+ ehtywira_cultural_resilience:0 "Cultural Resilience"
+ ehtywira_cultural_resilience_desc:0 "Ehtywirans are a resilient folk, that have resisted any attempts of eradication from both Mewitani and Ewitrawi peoples."
+ ehtywira_tight_control:0 "Tight Control"
+ ehtywira_tight_control_desc:0 "Our culture was always about authority. People and subjects of the kingdom are obedient to the Ruler, which he uses to keep a tight control over them."
