--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -74,6 +74,42 @@
  memlashal_new_tactics_desc:0 "After the liberation of Pamkusea, it quickly became apparent, that the ancient visparayan tradition of heavy cavalry and horse riding will not be effective in trechearous highlands of Pamkusea. Our ingenious military instantly adapted and took influence from local army model, famous for its use of foot infantry."
  memlashal_nusabate_of_the_north:0 "Nusabate of the North"
  memlashal_nusabate_of_the_north_desc:0 "Memlashal is standing alone against numerous heathens - eneratians, sigilians, anichvarians and tribal nations only wait for us to collapse. They are so focused on our fall they won't see our rise, for we are the true masters of Kakigia."
+ 
+ group_baraqazhi_ideas:0 "Baraqzhi Minor Ideas"
+ group_baraqazhi_ideas_start:0 "Baraqzhi Minor Traditions"
+ group_baraqazhi_ideas_bonus:0 "Baraqzhi Minor Ambition"
+ baraqazhi_shepherds_of_baraqhaz:0 "Shepherds of Baraqhaz"
+ baraqazhi_shepherds_of_baraqhaz_desc:0 "Our Shepherds are known for their wool around all of Hestani Basin. If we increase the amount of wool we make, we could profit from it."
+ baraqazhi_mountainous_diversity:0 "Mountainous Diversity"
+ baraqazhi_mountainous_diversity_desc:0 "Mountains are a harsh environement, and so people struggle to survive here. This makes our people less likely to start conflicts based on religion and more tolerant."
+ baraqazhi_passage_guides:0 "Passage Guides"
+ baraqazhi_passage_guides_desc:0 "Making it through the mountains is hard, so traders employ local guides to help them, which in return increases our trade potential, as without them, they can't make it through"
+ baraqazhi_sons_of_anoxwardan:0 "Sons of Anoxwardan"
+ baraqazhi_sons_of_anoxwardan_desc:0 "We are Sons of Anoxwardan, and fierce as fire itself. Let our enemies come, as we are not scared of them."
+ baraqazhi_bounded_by_loyalty:0 "Bounded by loyalty"
+ baraqazhi_bounded_by_loyalty_desc:0 "Our society values its social hierarchy, and has a long sense of loyalty for its society, and is ready to die for it."
+ baraqazhi_ties_of_land:0 "Ties of Land"
+ baraqazhi_ties_of_land_desc:0 "Our people are attached to their land, and they are ready to die for it, resulting in harder conquest of it."
+ baraqazhi_hillside_construction:0 "Hillside Construction"
+ baraqazhi_hillside_construction_desc:0 "With hills and mountains dominating our landscape, if we wanted to survive here, we had to adapt our architecture accordingly. Now we possess one of the best architects in whole region!"
+ 
+ auruvata_ideas:0 "Auruvatan Ideas"
+ auruvata_ideas_start:0 "Auruvatan Traditions"
+ auruvata_ideas_bonus:0 "Auruvatan Ambition"
+ auruvata_frontier_kingdom:0 "Frontier Kingdom"
+ auruvata_frontier_kingdom_desc:0 "Our Kingdom lies on the frontier of Visparaya, and can be invaded from any side. We had to learn how to defend it the hard way, but it allowed our military to flourish, and our military tradition is second to none."
+ auruvata_diverse_society:0 "Diverse Society"
+ auruvata_diverse_society_desc:0 "With many merchants across our lands and ports, with long-term migrations in the region, our society has grown to be a diverse one, and tolerant of other cultures and their practices."
+ auruvata_piracy_protection_program:0 "Piracy Protection Program"
+ auruvata_piracy_protection_program_desc:0 "With pirates plaguing our sea trade, we had to think of a better protection program for our merchants, which was so successful that in increased our trading capabilities."
+ auruvata_garamarz_autonomy:0 "Garamarz Autonomy"
+ auruvata_garamarz_autonomy_desc:0 "Garamarz is an area in the old east of our country, and with ever growing expansion of our state, we learned that other religions and their followers deserve respect as well."
+ auruvata_samadian_mercenaries:0 "Samadian Mercenaries"
+ auruvata_samadian_mercenaries_desc:0 "Due to being a Frontier kingdom, we are in the vicinity of Samadia, and their mercenaries have proven to be good in many wars we have fought while hiring them. We should strive to keep good relations with those mercenaries to keep our country safe in time of need."
+ auruvata_gatuzairitem:0 "Gatuzairitem"
+ auruvata_gatuzairitem_desc:0 "Gatuzairitem is a road system connecting north of our country with its most southern parts, going through the Baraqhaz Mountains Range, and it also serves as a good supply chain for our armies during the time of war."
+ auruvata_royal_palace_of_gabrasahr:0 "Royal Palace of Gabrasahr"
+ auruvata_royal_palace_of_gabrasahr_desc:0 "Royal Palace of Gabrasahr is seen as one of the monuments of prestige and rule over our lands. And many fear it, as its also seen as a symbol of our iron hand."
 
  estate_burghers_fra_autonomous_fleets:0 "Autonomous Fleets"
  estate_burghers_fra_autonomous_fleets_desc:0 "Despite officialy being under ownership of the great Nusabat, trade fleets of Fravasum are mostly controlled by merchant elites."
